@@ -44,6 +44,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Date
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|EnumSet
 import|;
 end_import
@@ -156,7 +166,35 @@ name|solr
 operator|.
 name|schema
 operator|.
+name|TrieDateField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
 name|TrieField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|DateMathParser
 import|;
 end_import
 
@@ -423,6 +461,20 @@ operator|new
 name|LongRangeEndpointCalculator
 argument_list|(
 name|sf
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|DATE
+case|:
+name|calc
+operator|=
+operator|new
+name|DateRangeEndpointCalculator
+argument_list|(
+name|sf
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 break|break;
@@ -1875,6 +1927,197 @@ argument_list|)
 operator|.
 name|longValue
 argument_list|()
+argument_list|)
+return|;
+block|}
+block|}
+DECL|class|DateRangeEndpointCalculator
+specifier|private
+specifier|static
+class|class
+name|DateRangeEndpointCalculator
+extends|extends
+name|RangeEndpointCalculator
+argument_list|<
+name|Date
+argument_list|>
+block|{
+DECL|field|TYPE_ERR_MSG
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|TYPE_ERR_MSG
+init|=
+literal|"SchemaField must use field type extending TrieDateField or DateRangeField"
+decl_stmt|;
+DECL|field|now
+specifier|private
+specifier|final
+name|Date
+name|now
+decl_stmt|;
+DECL|method|DateRangeEndpointCalculator
+specifier|public
+name|DateRangeEndpointCalculator
+parameter_list|(
+specifier|final
+name|SchemaField
+name|f
+parameter_list|,
+specifier|final
+name|Date
+name|now
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|now
+operator|=
+name|now
+expr_stmt|;
+if|if
+condition|(
+operator|!
+operator|(
+name|field
+operator|.
+name|getType
+argument_list|()
+operator|instanceof
+name|TrieDateField
+operator|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+name|TYPE_ERR_MSG
+argument_list|)
+throw|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|formatValue
+specifier|public
+name|String
+name|formatValue
+parameter_list|(
+name|Date
+name|val
+parameter_list|)
+block|{
+return|return
+operator|(
+operator|(
+name|TrieDateField
+operator|)
+name|field
+operator|.
+name|getType
+argument_list|()
+operator|)
+operator|.
+name|toExternal
+argument_list|(
+name|val
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|parseVal
+specifier|protected
+name|Date
+name|parseVal
+parameter_list|(
+name|String
+name|rawval
+parameter_list|)
+block|{
+return|return
+operator|(
+operator|(
+name|TrieDateField
+operator|)
+name|field
+operator|.
+name|getType
+argument_list|()
+operator|)
+operator|.
+name|parseMath
+argument_list|(
+name|now
+argument_list|,
+name|rawval
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|parseGap
+specifier|protected
+name|Object
+name|parseGap
+parameter_list|(
+specifier|final
+name|String
+name|rawval
+parameter_list|)
+block|{
+return|return
+name|rawval
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|parseAndAddGap
+specifier|public
+name|Date
+name|parseAndAddGap
+parameter_list|(
+name|Date
+name|value
+parameter_list|,
+name|String
+name|gap
+parameter_list|)
+throws|throws
+name|java
+operator|.
+name|text
+operator|.
+name|ParseException
+block|{
+specifier|final
+name|DateMathParser
+name|dmp
+init|=
+operator|new
+name|DateMathParser
+argument_list|()
+decl_stmt|;
+name|dmp
+operator|.
+name|setNow
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+return|return
+name|dmp
+operator|.
+name|parseMath
+argument_list|(
+name|gap
 argument_list|)
 return|;
 block|}
